--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,6 +45,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
+    z-index: 999;
     top: 0;
     left: 0;
     background-color: #FFF;
